--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "nekos-best.js": "^6.1.0"
+    "nekos-best.js": "^6.1.0",
+    "vanilla-tilt": "^1.8.0"
   }
 }
